Package_Tools/include-C/efl/ecore-con-1/inarbeit/Ecore_Con.h

#define ECORE_CON_USE_SSL ECORE_CON_USE_SSL2
#define ECORE_CON_REMOTE_SYSTEM ECORE_CON_REMOTE_TCP
typedef enum
{
  ECORE_CON_LOCAL_USER = 0, 
  ECORE_CON_LOCAL_SYSTEM = 1, 
  ECORE_CON_LOCAL_ABSTRACT = 2, 
  ECORE_CON_REMOTE_TCP = 3, 
  ECORE_CON_REMOTE_MCAST = 4, 
  ECORE_CON_REMOTE_UDP = 5, 
  ECORE_CON_REMOTE_BROADCAST = 6, 
  ECORE_CON_REMOTE_NODELAY = 7, 
  ECORE_CON_REMOTE_CORK = 8, 
  ECORE_CON_USE_SSL2 = 16 , 
  ECORE_CON_USE_SSL3 = 32 , 
  ECORE_CON_USE_TLS = 64 , 
  ECORE_CON_USE_MIXED = 96 , 
  ECORE_CON_LOAD_CERT = 128 , 
  ECORE_CON_NO_PROXY = 256 , 
  ECORE_CON_SOCKET_ACTIVATE = 512 
} Ecore_Con_Type;
typedef struct Ecore_Con_Socks Ecore_Con_Socks;
typedef void (*Ecore_Con_Dns_Cb)(const char *canonname,
                                 const char *ip,
                                 struct sockaddr *addr,
                                 int addrlen,
                                 void *data);
typedef struct _Ecore_Con_Server Ecore_Con_Server;
typedef struct _Ecore_Con_Client Ecore_Con_Client;
extern int ECORE_CON_EVENT_CLIENT_ADD;
extern int ECORE_CON_EVENT_CLIENT_DEL;
extern int ECORE_CON_EVENT_CLIENT_ERROR;
extern int ECORE_CON_EVENT_CLIENT_UPGRADE;
extern int ECORE_CON_EVENT_SERVER_ADD;
extern int ECORE_CON_EVENT_SERVER_DEL;
extern int ECORE_CON_EVENT_SERVER_ERROR;
extern int ECORE_CON_EVENT_SERVER_UPGRADE;
extern int ECORE_CON_EVENT_CLIENT_WRITE;
extern int ECORE_CON_EVENT_SERVER_WRITE;
extern int ECORE_CON_EVENT_CLIENT_DATA;
extern int ECORE_CON_EVENT_SERVER_DATA;
extern int ECORE_CON_EVENT_PROXY_BIND;
extern int ECORE_CON_EVENT_URL_DATA;
extern int ECORE_CON_EVENT_URL_COMPLETE;
extern int ECORE_CON_EVENT_URL_PROGRESS;
extern int               ecore_con_init(void);
extern int               ecore_con_shutdown(void);
extern Eina_Bool ecore_con_lookup(const char *name, Ecore_Con_Dns_Cb done_cb, const void *data) ;
extern int               ecore_con_ssl_available_get(void);
extern Eina_Bool         ecore_con_ssl_server_cert_add(Ecore_Con_Server *svr, const char *cert);
extern Eina_Bool         ecore_con_ssl_server_privkey_add(Ecore_Con_Server *svr, const char *key_file);
extern Eina_Bool         ecore_con_ssl_server_crl_add(Ecore_Con_Server *svr, const char *crl_file);
extern Eina_Bool         ecore_con_ssl_server_cafile_add(Ecore_Con_Server *svr, const char *ca_file);
extern void              ecore_con_ssl_server_verify(Ecore_Con_Server *svr);
extern void              ecore_con_ssl_server_verify_basic(Ecore_Con_Server *svr);
extern void              ecore_con_ssl_server_verify_name_set(Ecore_Con_Server *svr, const char *name);
extern const char       *ecore_con_ssl_server_verify_name_get(Ecore_Con_Server *svr);
extern Eina_Bool         ecore_con_ssl_server_upgrade(Ecore_Con_Server *svr, Ecore_Con_Type ssl_type);
extern Eina_Bool         ecore_con_ssl_client_upgrade(Ecore_Con_Client *cl, Ecore_Con_Type ssl_type);
extern Ecore_Con_Socks *ecore_con_socks4_remote_add(const char *ip, int port, const char *username);
extern Eina_Bool        ecore_con_socks4_remote_exists(const char *ip, int port, const char *username);
extern void             ecore_con_socks4_remote_del(const char *ip, int port, const char *username);
extern Ecore_Con_Socks *ecore_con_socks5_remote_add(const char *ip, int port, const char *username, const char *password);
extern Eina_Bool        ecore_con_socks5_remote_exists(const char *ip, int port, const char *username, const char *password);
extern void             ecore_con_socks5_remote_del(const char *ip, int port, const char *username, const char *password);
extern void             ecore_con_socks_lookup_set(Ecore_Con_Socks *ecs, Eina_Bool enable);
extern Eina_Bool        ecore_con_socks_lookup_get(Ecore_Con_Socks *ecs);
extern void             ecore_con_socks_bind_set(Ecore_Con_Socks *ecs, Eina_Bool is_bind);
extern Eina_Bool        ecore_con_socks_bind_get(Ecore_Con_Socks *ecs);
extern unsigned int     ecore_con_socks_version_get(Ecore_Con_Socks *ecs);
extern void             ecore_con_socks_remote_del(Ecore_Con_Socks *ecs);
extern void             ecore_con_socks_apply_once(Ecore_Con_Socks *ecs);
extern void             ecore_con_socks_apply_always(Ecore_Con_Socks *ecs);
extern char *ecore_con_local_path_new(Eina_Bool is_system, const char *name, int port)   ;
extern Ecore_Con_Server *ecore_con_server_add(Ecore_Con_Type type,
                                            const char *name, int port,
                                            const void *data);
extern Ecore_Con_Server *ecore_con_server_connect(Ecore_Con_Type type,
                                                const char *name, int port,
                                                const void *data);
extern void *            ecore_con_server_del(Ecore_Con_Server *svr);
extern const char *ecore_con_server_name_get(const Ecore_Con_Server *svr);
extern void *            ecore_con_server_data_get(Ecore_Con_Server *svr);
extern void *            ecore_con_server_data_set(Ecore_Con_Server *svr,
                                                 void *data);
extern Eina_Bool         ecore_con_server_connected_get(const Ecore_Con_Server *svr);
extern int               ecore_con_server_port_get(const Ecore_Con_Server *svr);
extern double            ecore_con_server_uptime_get(const Ecore_Con_Server *svr);
extern int               ecore_con_server_send(Ecore_Con_Server *svr,
                                             const void *data,
                                             int size);
extern void              ecore_con_server_client_limit_set(Ecore_Con_Server *svr,
                                                         int client_limit,
                                                         char reject_excess_clients);
extern const Eina_List *ecore_con_server_clients_get(const Ecore_Con_Server *svr);
extern const char *      ecore_con_server_ip_get(const Ecore_Con_Server *svr);
extern void              ecore_con_server_flush(Ecore_Con_Server *svr);
extern void              ecore_con_server_timeout_set(Ecore_Con_Server *svr, double timeout);
extern double            ecore_con_server_timeout_get(const Ecore_Con_Server *svr);
extern int               ecore_con_server_fd_get(const Ecore_Con_Server *svr);
extern int               ecore_con_client_fd_get(const Ecore_Con_Client *cl);
extern int               ecore_con_client_send(Ecore_Con_Client *cl,
                                             const void *data,
                                             int size);
extern void *            ecore_con_client_del(Ecore_Con_Client *cl);
extern void              ecore_con_client_data_set(Ecore_Con_Client *cl,
                                                 const void       *data);
extern void *            ecore_con_client_data_get(Ecore_Con_Client *cl);
extern const char *      ecore_con_client_ip_get(const Ecore_Con_Client *cl);
extern void              ecore_con_client_flush(Ecore_Con_Client *cl);
extern double            ecore_con_client_uptime_get(const Ecore_Con_Client *cl);
extern double            ecore_con_client_timeout_get(const Ecore_Con_Client *cl);
extern void              ecore_con_client_timeout_set(Ecore_Con_Client *cl, double timeout);
extern Eina_Bool         ecore_con_client_connected_get(const Ecore_Con_Client *cl);
extern int               ecore_con_client_port_get(const Ecore_Con_Client *cl);
extern Ecore_Con_Server *ecore_con_client_server_get(const Ecore_Con_Client *cl);
typedef enum _Ecore_Con_Url_Time
{
   ECORE_CON_URL_TIME_NONE = 0,
   ECORE_CON_URL_TIME_IFMODSINCE,
   ECORE_CON_URL_TIME_IFUNMODSINCE
} Ecore_Con_Url_Time;
typedef enum _Ecore_Con_Url_Http_Version
{
   ECORE_CON_URL_HTTP_VERSION_1_0,
   ECORE_CON_URL_HTTP_VERSION_1_1
} Ecore_Con_Url_Http_Version;